Add Trilha Estratégica feature

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <div id="settingsMenu">
         <button id="simuladoBtn" disabled>Simulado Personalizado</button>
         <button id="erradasBtn"  disabled>Erradas da Semana</button>
+        <button id="trilhaBtn">Trilha Estratégica</button>
         <button id="importBtn">Importar</button>
         <button id="exportBtn">Exportar</button>
       </div>
@@ -138,6 +139,20 @@
       <div id="pomodoroControls" style="display:none;">
         <button id="pauseResumeBtn">Pausar</button>
         <button id="stopBtn">Sair</button>
+      </div>
+    </div>
+  </div>
+  <!-- Modal de seleção de assunto para a Trilha -->
+  <div id="subjectPickerModal">
+    <div class="modal-content">
+      <h3>Selecionar Assunto</h3>
+      <div class="picker-row">
+        <select id="pickerDisc"></select>
+        <select id="pickerSub"></select>
+      </div>
+      <div class="picker-actions">
+        <button id="pickerAdd">Adicionar</button>
+        <button id="pickerCancel">Cancelar</button>
       </div>
     </div>
   </div>
