--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
       </div>
       <div class="picker-actions">
         <button id="pickerAdd">Adicionar</button>
+        <button id="pickerMicro" style="display:none;">Micro Simulado</button>
         <button id="pickerCancel">Cancelar</button>
       </div>
     </div>
